# sonic-audio-applet-pulse

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  config.h.cmake
appiumtests/: CMakeLists.txt  applettest.py
appiumtests/inputsynth/: CMakeLists.txt  inputsynth.cpp  setup.py
applet/: DeviceListItem.qml  main.qml  main.xml
applet/contents/code/: icon.js
applet/contents/config/: main.xml
applet/contents/ui/: ConfigGeneral.qml  DeviceListItem.qml  ListItemBase.qml  SmallToolButton.qml  StreamListItem.qml  VolumeSlider.qml  main.qml
po/cs/: kcm_pulseaudio.po  plasma_applet_org.kde.plasma.volume.po
po/de/: kcm_pulseaudio.po
po/ko/: kcm_pulseaudio.po
po/nn/: kcm_pulseaudio.po
po/pl/: kcm_pulseaudio.po
po/ro/: kcm_pulseaudio.po
po/ta/: kcm_pulseaudio.po
src/: CMakeLists.txt  audioicon.cpp  audioicon.h  context.cpp  context.h  device.cpp  device.h  devicenamesourcemodel.cpp  devicerenamemodel.cpp  devicerenamemodel.h  devicerenamesaver.cpp  devicerenamesaver.h  globalconfig.kcfg  gsettingsitem.cpp  modulemanager.cpp  port.h  preferreddevice.cpp  profile.cpp  profile.h  pulseaudio.cpp  pulseaudio.h  qtpamainloop.h  sink.cpp  sink.h  sinkinput.cpp  sinkinput.h  sourceoutput.cpp  speakertest.cpp  streammeter.cpp  streammeter.h  streamrestore.cpp  volumefeedback.cpp  volumemonitor.cpp  volumemonitor.h  volumeobject.h
src/dbus/: osdService.xml
src/kcm/: CMakeLists.txt  kcm_pulseaudio.json  module.cpp  resources.qrc
src/kcm/package/: metadata.desktop
src/kcm/package/contents/ui/: Advanced.qml  CardListItem.qml  DeviceComboBox.qml  DeviceListItem.qml  Devices.qml  StreamListItem.qml  VolumeControlsConfig.qml  main.qml
src/kcm/ui/: ContextBrokenOverlay.qml  DeviceListItem.qml  RenameDevices.qml  VolumeSlider.qml  icon.js  main.qml
src/kded/: CMakeLists.txt  audioshortcutsservice.cpp  audioshortcutsservice.h
src/pipewireqt/: CMakeLists.txt  context.cpp  context.h  core.cpp  core.h  core_p.h  initializer.cpp  initializer.h  node.cpp  node.h  registry.cpp  registry_p.h  threadloop.cpp  threadloop.h  threadloop_p.h
src/qml/: PulseObjectFilterModel.qml  dbusinterface.cpp  globalconfig.cpp  globalconfig.h  globalconfig.kcfg  globalconfig.kcfgc  globalconfigskeleton.h  globalservice.cpp  globalservice.h  listitemmenu.cpp  listitemmenu.h  microphoneindicator.cpp  microphoneindicator.h  osdinhibitor.h  plugin.cpp  preferreddevice.cpp  preferreddevice.h  preferredstream.cpp  preferredstream.h  pulseobjectfiltermodel.cpp  pulseobjectfiltermodel.h
